Added Mads' updates, now correctly parses Train schedules with time.